# ePaperDash

./: .gitignore  README.md  config.h  ePaperDash.ino  image_to_header.py  initial_image.h  logging.h  secrets.h.tmpl
services/desktop_dashboard_service/: .gitignore  README.md  pyproject.toml  start-service.sh
services/desktop_dashboard_service/architecture/: README.md  adr-0001-ddd-and-hexagonal-boundaries.md  adr-0002-plugin-panel-pipeline.md  adr-0003-svg-layout-and-mqtt-contract.md  adr-0004-source-failure-isolation-and-slot-clearing.md  adr-0005-bounded-mqtt-publish-retries-and-loop-recovery.md  adr-0006-multi-provider-weather-and-precision-rendering.md  adr-0007-i18n-locale-translations.md  adr-0007-switch-svg-renderer-to-rsvg-convert.md  adr-0013-time-of-day-profiles.md  current-specification.md  dd-0007-rich-text-spans-and-auto-font-size.md  dd-0008-mvg-fib-v2-departure-source.md  dd-0009-clock-source-and-renderer.md  dd-0009-two-zone-grid-layout.md  dd-0010-dashboard-layout-specification.md  dd-0011-ffb-waste-collection-source-and-renderer.md  dd-0011-google-calendar-recurring-events-and-title-filters.md  dd-0012-ffb-waste-collection-source-and-renderer.md  dd-0013-content-pressure-modes.md
services/desktop_dashboard_service/examples/: dashboard_config.toml  secrets.toml.tmpl
services/desktop_dashboard_service/image_samples/: .gitkeep
services/desktop_dashboard_service/tests/: test_analog_clock_renderer.py  test_application_service.py  test_clock.py  test_config_loader.py  test_content_pressure.py  test_ffb_waste_source.py  test_google_calendar_renderer.py  (+12 more)
(+56 files in other folders)
